--- a/apps/portal/templates/portal/contatos.html
+++ b/apps/portal/templates/portal/contatos.html
@@ -6,6 +6,7 @@
 <div class="row mb-3">
   <div class="col-md-12">
     <a href="{% url 'portal:contatos_dashboard' %}" class="btn btn-secondary"><i class="fas fa-chart-line"></i> Dashboard</a>
+    <a href="{% url 'portal:contatos_pipeline' %}" class="btn btn-warning btn-sm mr-2"><i class="fas fa-funnel-dollar mr-1"></i> Pipeline</a>
     <a href="{% url 'portal:contato_create' %}" class="btn btn-primary"><i class="fas fa-plus"></i> Novo Contato</a>
     <a href="{% url 'portal:contatos_export' %}" class="btn btn-success"><i class="fas fa-download"></i> Exportar</a>
     <button class="btn btn-info" onclick="$('#importModal').modal('show');"><i class="fas fa-upload"></i> Importar CSV</button>
