--- a/apps/portal/templates/portal/kanban.html
+++ b/apps/portal/templates/portal/kanban.html
@@ -74,6 +74,7 @@
 </div>
 {% endblock %}
 {% block extra_js %}
+<script src="{% static 'portal/js/kanban.js' %}"></script>
 <script src="{% static 'adminlte/plugins/jquery-ui/jquery-ui.min.js' %}"></script>
 <script src="{% static 'portal/js/marked.min.js' %}"></script>
 {# PortalKanban.init() is called automatically by portal.js boot() #}
